agregar funciones de regional en welcome

--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -18,7 +18,7 @@
           <ul>
             <li>Gestionar Pais</li>
             <li>Gestionar Ciudad</li>
-            
+            <li>Gestionar Regional</li>
           </ul>
           <mat-divider></mat-divider>
           <br>
